--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "backend": "file:",
     "body-parser": "^1.20.2",
+    "bull": "^3.22.4",
+    "child_process": "^1.0.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
+    "path": "^0.12.7",
+    "uuid": "^8.3.2"
   }
 }
