--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,20 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@monaco-editor/react": "^4.6.0",
+    "@mui/icons-material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.3",
+    "chakra-dayzed-datepicker": "^0.3.0",
+    "date-fns": "^3.6.0",
+    "dayzed": "^3.2.3",
     "framer-motion": "^11.3.24",
     "frontend": "file:",
     "jshint": "^2.13.6",
     "re-resizable": "^6.9.17",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
